Added watchlist functionality

--- a/watchlist.html
+++ b/watchlist.html
@@ -23,16 +23,14 @@
   <!-- Movies appear here  -->
   <div id="main" class="h-[50vh] flex flex-col justify-center items-center">
     <!-- Renders when nothing in watchlist  -->
-    <div id="empty-div" class="flex flex-col items-center space-y-2 font-bold text-center" >
+    <div id="empty-div" class="flex flex-col items-center space-y-2 font-bold text-center">
       <p class="text-neutral-700 text-2xl">Your watchlist looking little empty...</p>
       <a href="index.html" class="py-3">
         <img src="src/plus-icon.png" class="inline mr-2" alt="">
         <p class="text-white inline">Let's add some movies!</p>
       </a>
     </div>
-
-    </div>
   </div>
-</body>
+  <script src="getWatchlist.js"></script>
 
 </html>
