--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 
-<body class="font-inter bg-neutral-900 max-w-6xl mx-auto min-w-[350px]">
+<body class="font-inter bg-neutral-900 max-w-6xl mx-auto min-w-[300px]">
   <!-- Header goes here  -->
   <div id="header"
     class=" px-14 py-28 bg-no-repeat bg-cover bg-center text-white flex flex-col text-center space-y-6 md:bg-left-top md:flex-row md:justify-between md:items-baseline">
@@ -28,8 +28,8 @@
           d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z" />
       </svg>
 
-      <input type="text" value="Blade Runner" id="search-field"
-        class="bg-neutral-800 text-neutral-400 !outline-none w-[90%] rounded-lg inline-block text-center px-1 py-4 border-transparent border-2 focus:border-neutral-500  md:pl-20 md:rounded-r-none md:text-left md:w-[70%] md:focus:border-transparent">
+      <input type="text" placeholder="Blade Runner" id="search-field"
+        class="bg-neutral-800 text-neutral-400 placeholder:text-neutral-600 !outline-none w-[90%] rounded-lg inline-block text-center px-1 py-4 border-transparent border-2 focus:border-neutral-500  md:pl-20 md:rounded-r-none md:text-left md:w-[70%] md:focus:border-transparent">
       <button type="submit" onclick="search()"
         class="text-white font-bold border-2 border-transparent bg-neutral-600 w-[20%] rounded-lg py-4 md:rounded-l-none inline-block">Search</button>
     </div>
